[tool.poetry]
name = "multichain_explorer"
version = "0.1.0"
description = "A simple package to explore multiple blockchains in an homogeneous way"
authors = ["sdominguez894 <sdominguez894@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.28"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
