[tool.poetry]
name = "multichain_explorer"
version = "0.1.3"
description = "A simple package to explore multiple blockchains in an homogeneous way"
authors = ["sdominguez894 <sdominguez894@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.28"
cryptos = "^1.36"
blockfrost-python = "^0.4.3"
py-algorand-sdk = "^1.11.0"
terra-sdk = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
my-project = "multichain_explorer.main:run"