[metadata]
name = multichain-explorer-sdominguez894
version = 0.0.1
author = Sergio Dominguez
author_email = sdominguez894@gmail.com
description = A package to explore multiple blockchains in a unified way
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sdominguez894/multichain-explorer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src